# MC-Lab

./: 2014-11-17 inventarliste.xlsx  ip_ethernet_static.bat  static IP (HIL setup).bat  usernames, password, lisence, e-room.txt
00 handbook/: #00 main.lyx#  00 main.lyx  00 main.lyx.emergency  00 main.lyx~  00 main.tex  00 references.bak  00 referencesl.bib  00 referencesl.bib.bak  CSE1 control software.pptx  CSE1 servo settings.pptx  CSE1_ctrl_software.pptx  NTNU_logo.eps  heftelenke.txt  kommunikasjon.pptx
04 cRIO software/Data Dashboard CD/: Custom Device API.lvlib  Custom Device Data Dashboard CD.xml  Shared Variables.lvlib
04 cRIO software/FPGA IO/: Custom Personality Project.aliases  Custom Personality Project.lvlps  Custom Personality Project.lvproj  NI VeriStand FPGA DMA.xsd  NI VeriStand FPGA DMA.xsl  cRIO-9113 Custom Personality.fpgaconfig  cRIO-9113 Custom Personality.lvbitx
04 cRIO software/Oqus/: Oqus Configuration.llb  Oqus Engine - VxWorks.llb
05 raspberry pi software/: Button mapping PS3.txt  jscont.c
05 raspberry pi software/jscont arkiv/: jscont.c  jscont_20150107.c  jscont_20150115.c  jscont_ny.c
06 towing/: CSE1_nu_dot.m  CSE1_nu_dot_linear.m  CSE1_nu_dot_workEd.m  RUN.m  collectData.m  createFitPoly3.m  createFitPoly5.m  curveFitting.m  filterData.m  importASCIIwContents.m  importASCIIwContents_data.m  importASCIIwContents_info.m  missingData.m  offsetAverage.m  scaling.m  selectData.m  setup.m  setup_fredsa.m  surgefit_nl_surge.eps  test.m  thrustmodel_sfun.mexw64
Handbooks/MCLab/: MCLab_Handbook.aux  MCLab_Handbook.blg  MCLab_Handbook.tex  referencesl.bib
Handbooks/MCLab Handbook/: MCLab_Handbook.bbl  MCLab_Handbook.brf  MCLab_Handbook.tex  MCLab_Handbook.toc  appendix.aux  appendix.tex
QTM logg test/: readme.txt
QTM logg test/raw data/: script.m
ROS2/ros2_qualisys_driver/: CMakeLists.txt
ROS2/ros2_qualisys_driver/include/ros2_qualisys_driver/: qualisys_driver_node.hpp
ROS2/ros2_qualisys_driver/params/: params.yaml
ROS2/ros2_qualisys_driver/src/: qualisys_driver_node.cpp
SW/QTM logg test/: readme.txt  series1.mat  series2.mat
SW/raspberry pi software/: Button mapping PS3.txt
SW/ros2_qualisys_driver/: package.xml
SW/towing sw/: CSE1_nu_dot_linear.m  CSE1_nu_dot_workEd.m  RUN.m  collectData.m  createFitPoly5.m  importASCIIwContents_info.m  scaling.m  selectData.m
Testing/: Sea state parameters for DP testing.docx
_Legacy/: ip_ethernet_dhcp.bat  ip_ethernet_static.bat  usernames, password, lisence, e-room.txt
_Legacy/04 cRIO software/: WL_Joystick må legges i.rtf
_Legacy/05 raspberry pi software/: QtSixA-1.5.1-src.tar  sixpair.c
_Legacy/06 towing/: CSE1_nu_dot.m  createFitPoly3.m  curveFitting.m  filterData.m  importASCIIwContents.m  importASCIIwContents_data.m  missingData.m  (+6 more)
(+219 files in other folders)
